--- a/src/css/components/_footer.scss
+++ b/src/css/components/_footer.scss
@@ -1,39 +1,66 @@
 .main-footer {
-  clear: both;
-  margin-top: 4rem;
-  padding-top: 8rem;
-}
+	clear: both;
+	margin-top: 64px;
+	margin-top: 4rem;
+	padding-top: 128px;
+	padding-top: 8rem;
 
-.main-footer .wrapper {
-  border-top: 2px solid #A18147;
-  padding-top: 2rem;
-}
+	.wrapper {
+		border-top: 2px solid #a18147;
+		padding-top: 32px;
+		padding-top: 2rem;
+	}
 
-.main-footer .logo-copyright {
-  float: left;
-  width:38%;
+	.logo-copyright {
+		float: left;
+		width: 38%;
+	}
 }
 
 .footer--nav {
-  float: right;
-  width: 60%;
-  text-align: right;
+	float: right;
+	width: 60%;
+	text-align: right;
+
+	a {
+		&:last-child {
+			margin-right: 0;
+		}
+
+		color: #fff;
+		display: inline-block;
+		text-decoration: none;
+		text-transform: uppercase;
+		padding: 40px 0;
+		padding-top: 0;
+		text-align: right;
+		margin-right: 32px;
+		margin-right: 2rem;
+		font-size: 12px;
+		letter-spacing: 2px;
+		vertical-align: middle;
+	}
 }
 
-.footer--nav a:last-child {
-  margin-right: 0;
-}
+@media (max-width:700px) {
+	.main-footer {
+		.logo-copyright {
+			float: none;
+			text-align: center;
+			padding-bottom: 32px;
+			width: 100%;
+		}
+	}
 
-.footer--nav a {
-  color: white;
-  display: inline-block;
-  text-decoration: none;
-  text-transform: uppercase;
-  padding: 40px 0;
-  padding-top: 0;
-  text-align: right;
-  margin-right: 2rem;
-  font-size: 12px;
-  letter-spacing: 2px;
-  vertical-align: middle;
+	.footer--nav {
+		width: 100%;
+		float: none;
+		clear: both;
+
+		a {
+			display: block;
+			text-align: center;
+			margin-right: 0;
+		}
+	}
 }
