--- a/src/css/_settings.scss
+++ b/src/css/_settings.scss
@@ -885,4 +885,5 @@ $block-grid-max: 8;
 @import './components/_typography.scss';
 @import './components/_forms.scss';
 @import './components/_footer.scss';
+@import './components/_founder-grid.scss';
 @import './grid-custom.scss';
