--- a/src/css/components/_about.scss
+++ b/src/css/components/_about.scss
@@ -1,7 +1,9 @@
 .about-bio {
-  margin-bottom: 4rem;
-  h3 {
-    letter-spacing: 8px;
-    font-size: 15px;
-  }
+	margin-bottom: 64px;
+	margin-bottom: 4rem;
+
+	h3 {
+		letter-spacing: 8px;
+		font-size: 15px;
+	}
 }
