--- a/src/css/components/_featured-founder.scss
+++ b/src/css/components/_featured-founder.scss
@@ -1,142 +1,188 @@
 .featured-founder {
-    padding-top: 2rem;
-    @media(min-width: 720px) {
-        padding-bottom: 6rem;
-    }
-    overflow: visible;
-}
+	padding-top: 32px;
+	padding-top: 2rem;
+	overflow: visible;
 
-#founders .featured-founder {
-    @media(min-width: 720px) {
-        margin-bottom: 6rem;
-    }
-}
+	h2 {
+		color: #fff;
+		font-weight: 400;
+		letter-spacing: 12px;
+		font-size: 15px;
+		text-transform: uppercase;
+		text-align: center;
+	}
 
-.featured-founder h2 {
-    color: white;
-    font-weight: 400;
-    letter-spacing: 12px;
-    font-size: 15px;
-    text-transform: uppercase;
-    text-align: center;
-    @media(min-width: 720px) {
-        padding-bottom: 4rem;
-        font-size: 18px;
-    }
+	img {
+		max-width: 100%;
+		padding: 0;
+	}
 }
 
 .featured-founder--images {
-    position: relative;
-}
-
-.featured-founder img {
-    max-width: 100%;
-    padding: 0;
+	position: relative;
 }
 
 .featured-founder--images--large {
-    max-width: 80%;
+	max-width: 80%;
 }
 
 .featured-founder--images--small {
-    position: absolute;
-    right: 0;
-    max-width: 40%;
-    bottom: -75px;
-    text-align: center;
-    @media(min-width: 720px) {
-        bottom: -160px;
-    }
-    a.view-link {
-        color: white;
-        text-transform: uppercase;
-        letter-spacing: 4px;
-        border-bottom: 1px solid #EEBC57;
-        display: none;
-        @media(min-width: 720px) {
-            display: inline-block;
-            margin-top: 2rem;
-        }
-    }
+	position: absolute;
+	right: 0;
+	max-width: 270px;
+	bottom: -75px;
+	text-align: center;
+
+	a.view-link {
+		color: #fff;
+		text-transform: uppercase;
+		letter-spacing: 4px;
+		border-bottom: 1px solid #eebc57;
+		display: none;
+	}
+}
+
+a.view-link {
+	color: #fff;
+	text-transform: uppercase;
+	letter-spacing: 4px;
+	border-bottom: 1px solid #eebc57;
+	display: none;
 }
 
 .featured-founder--bio {
-    margin-top: 4rem;
-    @media(min-width: 720px) {
-        margin-top: 6rem;
-    }
-    max-width: 500px;
-}
+	margin-top: 64px;
+	margin-top: 4rem;
+	max-width: 500px;
 
-.featured-founder--bio h3 {
-    color: #FFFFFF;
-    font-size: 15px;
-    letter-spacing: 8px;
-    @media(min-width: 720px) {
-        font-size: 18px;
-        letter-spacing: 12px;
-    }
-    font-weight: 500;
-    text-transform: uppercase;
-    padding-top: 2rem;
-    @media(min-width: 720px) {
-        padding-top: 0;
-    }
-}
+	.view-link {
+		display: none;
+	}
 
-.bio-flipped h3 {
-    @media(min-width: 720px) {
-        padding-top: 3rem;
-    }
-}
+	h3 {
+		color: #fff;
+		font-size: 15px;
+		letter-spacing: 8px;
+		font-weight: 500;
+		text-transform: uppercase;
+		padding-top: 32px;
+		padding-top: 2rem;
+	}
 
-.featured-founder--bio p {
-    height: 136px;
-    max-width: 446px;
-    opacity: 0.65;
-    color: #FFFFFF;
-    font-family: "GT Walsheim", sans-serif;
-    @media(min-width: 740px) {
-        font-size: 20px;
-    }
-    font-weight: 300;
-    line-height: 1.8;
+	p {
+		height: auto;
+		max-width: 446px;
+		opacity: .65;
+		color: #fff;
+		font-family: GT Walsheim, sans-serif;
+		font-weight: 300;
+		line-height: 1.8;
+	}
 }
 
 .founders {
-    clear: both;
-    width: 100%;
-}
+	clear: both;
+	width: 100%;
 
-.founders h3 {
-    padding-top: 3rem;
-    padding-bottom: 3rem;
-    text-align: center;
+	h3 {
+		padding-top: 48px;
+		padding-top: 3rem;
+		padding-bottom: 48px;
+		padding-bottom: 3rem;
+		text-align: center;
+	}
 }
 
 .founder {
-    text-align: left;
+	text-align: left;
+
+	img {
+		width: 100%;
+	}
+
+	h4 {
+		font-size: 11px;
+		color: #fff;
+		letter-spacing: 4px;
+		text-transform: uppercase;
+		line-height: 1;
+		padding-bottom: 0;
+		margin-bottom: 0;
+		padding-top: 2em;
+		font-weight: 400;
+	}
+
+	p {
+		font-size: 15px;
+		margin-top: 0;
+		padding-top: .4em;
+		margin-bottom: 54.4px;
+		margin-bottom: 3.4rem;
+	}
 }
 
-.founder img {
-    width: 100%;
+
+@media (min-width:720px) {
+
+	.featured-founder {
+		padding-bottom: 6rem;
+
+		h2 {
+			padding-bottom: 4rem;
+			font-size: 18px;
+		}
+	}
+
+	#founders {
+		.featured-founder {
+			margin-bottom: 6rem;
+		}
+	}
+
+	.featured-founder--images--small {
+		bottom: -160px;
+
+		a.view-link {
+			display: inline-block;
+			margin-top: 2rem;
+		}
+	}
+
+	a.view-link {
+		display: inline-block;
+		margin-top: 2rem;
+	}
+
+	.featured-founder--bio {
+		margin-top: 6rem;
+
+		h3 {
+			font-size: 18px;
+			letter-spacing: 12px;
+			padding-top: 0;
+		}
+	}
 }
 
-.founder h4 {
-    font-size: 11px;
-    color: white;
-    letter-spacing: 4px;
-    text-transform: uppercase;
-    line-height: 1;
-    padding-bottom: 0;
-    margin-bottom: 0;
-    padding-top: 2em;
-    font-weight: normal;
+
+
+@media (max-width:700px) {
+	.featured-founder--images--small {
+		bottom: -75px;
+		max-width: 160px;
+	}
+
+	.featured-founder--bio {
+		.view-link {
+			display: inline-block;
+		}
+	}
 }
 
-.founder p {
-    font-size: 15px;
-    margin-top: 0;
-    padding-top: .4em;
-    margin-bottom: 3.4rem;
+@media (min-width:740px) {
+	.featured-founder--bio {
+		p {
+			font-size: 20px;
+		}
+	}
 }
