--- a/src/css/components/_message.scss
+++ b/src/css/components/_message.scss
@@ -1,57 +1,84 @@
 .message {
-    overflow: visible;
-    clear: right;
+	overflow: visible;
+	clear: right;
 }
 
 .message__founder {
-    padding-top: 4rem;
+	padding-top: 64px;
+	padding-top: 4rem;
 }
 
 .message-text {
-    max-width: 710px;
-    float: right;
-    margin: 0;
+	max-width: 710px;
+	float: right;
+	margin: 0;
+
+	p {
+		font-size: 18px;
+		line-height: 1.9;
+		margin-top: 0;
+		padding-top: 0;
+		margin-top: -35px;
+		margin-bottom: 4em;
+
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+
+	h3 {
+		margin-bottom: 55px;
+	}
+
+	p.question-big {
+		font-size: 24px;
+	}
+
+	.question {
+		font-weight: 400;
+		color: #fff;
+		margin-bottom: 2.6em;
+	}
 }
 
-.message-text p {
-    font-size: 18px;
-    @media(min-width: 720px) {
-        font-size: 20px;
-    }
-    line-height: 1.9;
-    margin-top: 0;
-    padding-top: 0;
-    margin-top: -35px;
-    margin-bottom: 4em;
+.message-text.med {
+	min-height: 380px;
+	padding-top: 0;
 }
 
-.message-text p:last-child {
-    margin-bottom: 0;
+.message-text.long {
+	min-height: 500px;
 }
 
 .q-a {
-    overflow: hidden;
-    .message-text {
-        float: none;
-        margin: auto;
-    }
-}
+	overflow: hidden;
 
-.message-text .question {
-    font-weight: normal;
-    color: white;
-    margin-bottom: 2.6em;
-    @media(min-width: 720px) {
-        min-width: 710px;
-    }
+	.message-text {
+		float: none;
+		margin: auto;
+	}
 }
 
 .answer {
-    padding-bottom: 2.4em;
-    width: 100%;
-    max-width: none;
+	padding-bottom: 2.4em;
+	width: 100%;
+	max-width: none;
 }
 
 .message--only {
-    margin-bottom: 6rem;
+	margin-bottom: 96px;
+	margin-bottom: 6rem;
+}
+
+@media (min-width:720px) {
+
+	.message-text {
+		p {
+			font-size: 20px;
+		}
+
+		.question {
+			min-width: 710px;
+		}
+	}
 }
