--- a/src/css/components/_quote.scss
+++ b/src/css/components/_quote.scss
@@ -1,38 +1,50 @@
 .quote {
-    clear: both;
-    padding-top: 4rem;
+	clear: both;
+	padding-top: 64px;
+	padding-top: 4rem;
+
+	blockquote {
+		font-size: 26px;
+		font-family: Pensum, serif;
+		font-weight: 200;
+		color: #fff;
+		text-indent: -.4em;
+		max-width: 800px;
+		line-height: 1.6;
+	}
+
+	cite {
+		color: hsla(0, 0%, 100%, .7);
+		margin-bottom: 64px;
+		margin-bottom: 4rem;
+
+		.dash {
+			color: #eebc57;
+		}
+
+		&:before {
+			display: none;
+		}
+	}
 }
 
-#single-founder .quote {
-    padding-bottom: 4rem;
+#single-founder {
+	.quote {
+		padding-bottom: 64px;
+		padding-bottom: 4rem;
+	}
 }
 
-.quote {
 
-    blockquote {
-        font-size: 26px;
-        @media(min-width: 720px) {
-            font-size: 52px;
-        }
-        font-family: "Pensum", serif;
-        font-weight: 200;
-        color: white;
-        text-indent: -.4em;
-        max-width: 800px;
-        line-height: 1.6;
-    }
+@media (min-width:720px) {
 
-    cite {
-        color: rgba(255,255,255,0.7);
-        @media(min-width: 720px) {
-            padding-left: 2rem;
-        }
-        .dash {
-            color: #EEBC57;
-        }
-        &:before {
-            display: none;
-        }
-    }
+	.quote {
+		blockquote {
+			font-size: 52px;
+		}
 
+		cite {
+			padding-left: 2rem;
+		}
+	}
 }
