--- a/src/css/components/_sideways-heading.scss
+++ b/src/css/components/_sideways-heading.scss
@@ -1,35 +1,48 @@
 .sideways-heading {
-    width: 235px;
-    text-align: right;
-    position: relative;
-    transform: rotate(90deg);
-    transform-origin: 0 10px;
-    display: none;
-    @media(min-width: 850px) {
-        display: block;
-    }   
+	width: 235px;
+	text-align: right;
+	position: relative;
+	-webkit-transform: rotate(90deg);
+	transform: rotate(90deg);
+	-webkit-transform-origin: 0 10px;
+	transform-origin: 0 10px;
+	display: none;
+
+	&:before {
+		content: "";
+		display: block;
+		height: 1px;
+		background: #eebc57;
+		width: 100%;
+		position: absolute;
+		top: 50%;
+		left: 0;
+	}
 }
 
-.sideways-heading:before {
-    content: '';
-    display: block;
-    height: 1px;
-    background: #EEBC57;
-    width: 100%;
-    position: absolute;
-    top: 50%;
-    left: 0;
+.sideways-heading.med {
+	width: 380px;
+}
+
+.sideways-heading.long {
+	width: 500px;
 }
 
 .sideways-heading--text {
-    text-transform: uppercase;
-    letter-spacing: 6px;
-    font-size: 12px;
-    display: inline-block;
-    padding: 10px 10px 10px 40px;
-    background: #2D292F;
-    position: relative;
-    z-index: 99;
-    color: white;
-    font-weight: normal;
+	text-transform: uppercase;
+	letter-spacing: 6px;
+	font-size: 12px;
+	display: inline-block;
+	padding: 10px 10px 10px 40px;
+	background: #2d292f;
+	position: relative;
+	z-index: 99;
+	color: #fff;
+	font-weight: 400;
+}
+
+@media (min-width:850px) {
+	.sideways-heading {
+		display: block;
+	}
 }
