--- a/src/css/components/_typography.scss
+++ b/src/css/components/_typography.scss
@@ -1,40 +1,40 @@
 @font-face {
   font-family: 'GT';
-  src:  url('/public/fonts/GT-Walsheim-Medium.woff') format('woff');
+  src: url('/public/fonts/GT-Walsheim-Medium.woff') format('woff');
   font-weight: normal;
 }
 
 @font-face {
   font-family: 'GT';
-  src:  url('/public/fonts/GT-Walsheim-Medium-Oblique.woff') format('woff');
+  src: url('/public/fonts/GT-Walsheim-Medium-Oblique.woff') format('woff');
   font-weight: normal;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'GT';
-  src:  url('/public/fonts/GT-Walsheim-Light.woff') format('woff');
+  src: url('/public/fonts/GT-Walsheim-Light.woff') format('woff');
   font-weight: light;
 }
 
 @font-face {
   font-family: 'GT';
-  src:  url('/public/fonts/GT-Walsheim-Light-Oblique.woff') format('woff');
+  src: url('/public/fonts/GT-Walsheim-Light-Oblique.woff') format('woff');
   font-weight: light;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Pensum';
-  src:  url('/public/fonts/PensumPro-Medium.woff') format('woff'),
-        url('/public/fonts/PensumPro-Medium.woff2') format('woff2');
+  src: url('/public/fonts/PensumPro-Medium.woff') format('woff'),
+    url('/public/fonts/PensumPro-Medium.woff2') format('woff2');
   font-weight: normal;
 }
 
 @font-face {
   font-family: 'Pensum';
-  src:  url('/public/fonts/PensumPro-Light.woff') format('woff'),
-        url('/public/fonts/PensumPro-Light.woff2') format('woff2');
+  src: url('/public/fonts/PensumPro-Light.woff') format('woff'),
+    url('/public/fonts/PensumPro-Light.woff2') format('woff2');
   font-weight: 200;
 }
 
@@ -43,15 +43,12 @@ body {
 }
 
 h3 {
-    color: #FFFFFF;
-    font-size: 18px;
-    font-weight: 500;
-    letter-spacing: 10px;
-    @media(min-width: 720px) {
-      letter-spacing: 20px;
-    }
-    text-transform: uppercase;
-    font-family: 'GT', serif;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: 10px;
+  text-transform: uppercase;
+  font-family: GT, serif;
 }
 
 .uc {
@@ -61,12 +58,12 @@ h3 {
 
 .uc-inline {
   font-size: 15px;
-  font-weight: bold;
-  color: white;
-  border-bottom: 1px solid #EEBC57;
+  font-weight: 700;
+  color: #fff;
+  border-bottom: 1px solid #eebc57;
 }
 
 .standout {
-  color: white;
+  color: #fff;
   font-style: italic;
 }
