--- a/src/css/components/_values.scss
+++ b/src/css/components/_values.scss
@@ -1,34 +1,39 @@
 .values {
-    padding-top: 6rem;
+	padding-top: 96px;
+	padding-top: 6rem;
+
+	.col {
+		margin-bottom: 64px;
+		margin-bottom: 4rem;
+	}
+
+	h3 {
+		line-height: 2;
+		margin: 0;
+		padding: 0;
+		padding-bottom: 2.4em;
+		margin-top: -35.2px;
+		margin-top: -2.2rem;
+	}
 }
 
-.values .col {
-    margin-bottom: 4rem;
-}
+.value {
+	img {
+		height: 80px;
+	}
 
-.values h3 {
-    line-height: 2;
-    margin: 0;
-    padding: 0;
-    padding-bottom: 2.4em;
-    margin-top: -2.2rem;
-}
+	h4 {
+		font-size: 11px;
+		color: #fff;
+		letter-spacing: 4px;
+		text-transform: uppercase;
+		line-height: 4;
+		padding-top: 1em;
+		padding-bottom: 1.4em;
+		font-weight: 400;
+	}
 
-.value img {
-    height: 80px;
-}
-
-.value h4 {
-    font-size: 11px;
-    color: white;
-    letter-spacing: 4px;
-    text-transform: uppercase;
-    line-height: 4;
-    padding-top: 1em;
-    padding-bottom: 1.4em;
-    font-weight: normal;
-}
-
-.value p {
-   font-size: 14px;
+	p {
+		font-size: 14px;
+	}
 }
