--- a/src/css/components/_founder-grid.scss
+++ b/src/css/components/_founder-grid.scss
@@ -146,6 +146,7 @@
     left: 0;
     right: 0;
     bottom: 0;
+    z-index: 1;
   }
 
   &:hover .bg {
@@ -158,6 +159,23 @@
     line-height: 1.5em;
     transform: translatey(-100%);
     pointer-events: none;
+  }
+
+  .founder-logo {
+    position: relative;
+    z-index: 0;
+
+    .tag {
+      position: absolute;
+      font-size: 11px;
+      top: -15px;
+      right: -40px;
+      color: #ffffff;
+      background: #625df5;
+      border-radius: 5px;
+      padding: 1px 5px;
+      font-weight: 600;
+    }  
   }
 }
 
