--- a/src/css/components/_founder-grid.scss
+++ b/src/css/components/_founder-grid.scss
@@ -43,7 +43,8 @@
 
 @media (max-width: 680px) {
   .founder-grid {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
+    grid-gap: 10px;
   }
 }
 
@@ -119,12 +120,21 @@
 
   &.kit .founder-logo, &.kuli .founder-logo {
     max-width: 80%;
-    max-height: 140px;
+    max-height: 160px;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+
+    img {
+      width: auto;
+      height: 100%;
+    }
   }
 
   > a {
     overflow: hidden;
     z-index: 0;
+    cursor: pointer;
   }
 
   .bg {
@@ -181,8 +191,14 @@
 
 @media (max-width: 680px) {
   .founder {
-    grid-template-rows: 1fr 80px;
+    grid-template-rows: 1fr;
     min-height: 220px;
+
+    h4 {
+      line-height: 1.5;
+      margin-top: 0;
+      margin-bottom: 15px;
+    }
   }
 }
 
@@ -213,6 +229,10 @@
 
 @media (max-width: 680px) {
   .founder.kuli .founder-logo {
-    max-height: 80px;
+    max-height: 120px;
+  }
+
+  .founder h4.company {
+    margin-top: 38%;
   }
 }
