Change offsight founders image

--- a/src/css/components/_founder-grid.scss
+++ b/src/css/components/_founder-grid.scss
@@ -27,6 +27,14 @@
     margin-bottom: 54.4px;
     margin-bottom: 3.4rem;
   }
+
+
+  &.pilot .founder-logo {
+    img {
+      height: 100px;
+    }
+  }
+
 }
 
 .founder-grid {
